2003-06-07  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* device/lib/_atof.c, device/lib/Makefile.in, device/include/stdlib.h,
	  device/lib/libfloat.lib: added atof function.

2003-06-04  Bernhard Held <bernhard@bernhardheld.de>

	* doc/sdccman.lyx: updated to Lyx 1.3
	* doc/cdbfileformat.lyx: updated to Lyx 1.3
	* doc/test_suite_spec.lyx: updated to Lyx 1.3
	* doc/Makefile: added fix for the \tabularnewline problem, thanks to Jesus

2003-06-03  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCpeeph.c: separate peepRules2pCode() for pic16 by "Vangelis Rokas" <vrokas@otenet.gr>

2003-06-02  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: cvs revision keywords, passing pdf information in latex preamble,
          additions to the "related tools/documentation" section

2003-06-02  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglue.c (tempfileandname): added check for missing TMP/TEMP/TMPDIR variable

2003-05-29  Bernhard Held <bernhard@bernhardheld.de>

	* src/pic/device.c: added 16F819, patch by "David I. Lehn" <dlehn@vt.edu>
	* src/SDCCcse.c (algebraicOpts): fixed "c * 1" 

2003-05-28  Bernhard Held <bernhard@bernhardheld.de>

	* doc/sdccman.lyx: fix double dash and other minor things
	* doc/Makefile: fix double dash

2003-05-28  Karl Bongers(patches from Martin Helmling)
	* debugger/mcs51/sdcdb.c,cmd.c,break.c and .h files. Martin adds
	  condition and ignore commands.

2003-05-28  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: Changes all over, index improved, smaller margins. The manual
	  is in parts still quite out of date, I did changes as far as I felt makes sense
	  for a non-native english speaker.
	  Please feel free to add to the manual or to correct my changes.
	* doc/Makefile: undid touching the date of intermediate tex files.

2003-05-26  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: Manual has an index now

2003-05-25  Bernhard Held <bernhard@bernhardheld.de>
